--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<h1>RevigoreLife Coming Soon</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RevigoreLife – Coming Soon</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #00b894, #55efc4);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
+    h1 {
+      font-size: 3rem;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <div>
+    <h1>RevigoreLife</h1>
+    <p>Your wellness journey starts soon.<br>
+    Website under construction – stay tuned!</p>
+  </div>
+</body>
+</html>
