--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
       height: 100vh;
       margin: 0;
       text-align: center;
+      flex-direction: column;
+    }
+    header {
+      margin-bottom: 20px;
+    }
+    header img {
+      max-width: 220px;
+      height: auto;
     }
     h1 {
       font-size: 3rem;
+      margin: 0;
     }
     p {
       font-size: 1.2rem;
@@ -26,6 +35,11 @@
   </style>
 </head>
 <body>
+  <header>
+    <a href="https://revigorelife.com">
+      <img src="assets/img/revigorelife-logo.png" alt="RevigoreLife Logo">
+    </a>
+  </header>
   <div>
     <h1>RevigoreLife</h1>
     <p>Your wellness journey starts soon.<br>
