--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
   <header>
     <a href="https://revigorelife.com">
-      <img src="assets/img/revigorelife-logo.png" alt="RevigoreLife Logo">
+      <img src="assets/img/Logo1.png" alt="RevigoreLife Logo">
     </a>
   </header>
   <div>
