--- a/index.html
+++ b/index.html
@@ -1,49 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RevigoreLife – Coming Soon</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>RevigoreLife — Wellness, Elevated</title>
+
+  <!-- Premium fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
+
+  <!-- Meta / theme -->
+  <meta name="theme-color" content="#0B4F3F">
+  <link rel="icon" type="image/png" href="/assets/img/revigorelife-logo2.png">
+
   <style>
-    body { 
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #00b894, #55efc4);
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-      flex-direction: column;
+    :root{
+      --evergreen:#0B4F3F;
+      --emerald:#1AA37A;
+      --gold:#D4B46A;
+      --ink:#1B1F23;
+      --paper:#FAFAF7;
     }
-    header {
-      margin-bottom: 20px;
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background:
+        radial-gradient(1200px 800px at 20% 0%, rgba(26,163,122,.15), transparent 60%),
+        radial-gradient(1000px 700px at 80% 100%, rgba(11,79,63,.18), transparent 60%),
+        var(--paper);
+      color:var(--ink);
+      font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      padding:32px;
     }
-    header img {
-      max-width: 220px;
-      height: auto;
+    .card{
+      width:min(880px,90vw);
+      background:#fff;
+      border-radius:22px;
+      padding:42px 36px 36px;
+      box-shadow:
+        0 10px 30px rgba(0,0,0,.06),
+        0 1px 0 rgba(0,0,0,.05) inset;
+      text-align:center;
+      border:1px solid rgba(11,79,63,.08);
     }
-    h1 {
-      font-size: 3rem;
-      margin: 0;
+    .brand{
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap:14px;
+      margin-bottom:18px;
+      text-decoration:none;
+      color:inherit;
     }
-    p {
-      font-size: 1.2rem;
-      margin-top: 1rem;
+    .brand img{
+      width:120px; /* bigger logo */
+      height:auto;
+      display:block;
     }
+    .wordmark{
+      font-family:"Playfair Display", serif;
+      font-weight:700;
+      letter-spacing:.5px;
+      font-size: clamp(28px, 5vw, 40px);
+      color:var(--evergreen);
+      line-height:1.05;
+    }
+    .tag{
+      font-size:16px;
+      color:#40514e;
+      margin-top:6px;
+    }
+    .divider{
+      width:86px;height:2px;background:var(--gold);
+      margin:18px auto 24px;border-radius:2px;
+    }
+    .lead{font-size:18px;color:#334;}
+    .pill{
+      display:inline-flex; align-items:center; gap:10px;
+      margin-top:22px;
+      padding:12px 18px;
+      border:1px solid rgba(11,79,63,.18);
+      border-radius:999px;
+      background:#fff;
+      color:#163; font-weight:500;
+    }
+    .pill svg{width:18px;height:18px}
+    footer{margin-top:26px; font-size:13px; color:#677}
+    .links a{color:var(--evergreen); text-decoration:none; margin:0 8px}
+    .links a:hover{text-decoration:underline}
   </style>
 </head>
 <body>
-  <header>
-    <a href="https://revigorelife.com">
-      <img src="assets/img/Logo1.png" alt="RevigoreLife Logo">
+  <main class="card">
+    <a class="brand" href="https://revigorelife.com" aria-label="RevigoreLife homepage">
+      <!-- Using your uploaded PNG logo -->
+      <img src="assets/img/revigorelife-logo2.png" alt="RevigoreLife logo">
+      <div class="wordmark">REVIGORELIFE</div>
+      <div class="tag">Wellness • Balance • Vitality</div>
     </a>
-  </header>
-  <div>
-    <h1>RevigoreLife</h1>
-    <p>Your wellness journey starts soon.<br>
-    Website under construction – stay tuned!</p>
-  </div>
+
+    <div class="divider"></div>
+
+    <p class="lead">
+      Our new experience is almost ready. Evidence-based wellness insights, curated products, and
+      simple guides to help you feel your best—every day.
+    </p>
+
+    <div class="pill" role="status" aria-live="polite">
+      <!-- clock icon -->
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+        <circle cx="12" cy="12" r="9"></circle>
+        <path d="M12 7v5l3 2"></path>
+      </svg>
+      Launching soon — stay tuned
+    </div>
+
+    <footer>
+      <div class="links" style="margin-top:10px">
+        <a href="/">Home</a> •
+        <a href="#" aria-disabled="true">Privacy</a> •
+        <a href="#" aria-disabled="true">Disclosures</a>
+      </div>
+      <div style="margin-top:8px">© <script>document.write(new Date().getFullYear())</script> RevigoreLife</div>
+    </footer>
+  </main>
 </body>
 </html>
