--- a/index.html
+++ b/index.html
@@ -1,148 +1,156 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>RevigoreLife — Wellness, Elevated</title>
+  <meta charset="utf-8">
+  <title>RevigoreLife — Live Your Best Life</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="RevigoreLife helps you live your best life with health, wellness, and lifestyle tips.">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="RevigoreLife — Live Your Best Life">
+  <meta property="og:description" content="RevigoreLife helps you live your best life with health, wellness, and lifestyle tips.">
+  <meta property="og:image" content="/og-cover.jpg">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://revigorelife.com/">
 
-  <!-- Premium fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="RevigoreLife — Live Your Best Life">
+  <meta name="twitter:description" content="RevigoreLife helps you live your best life with health, wellness, and lifestyle tips.">
+  <meta name="twitter:image" content="https://revigorelife.com/og-cover.jpg">
 
-  <!-- Theme + favicon -->
-  <meta name="theme-color" content="#0B4F3F">
-  <link rel="icon" type="image/png" href="/assets/img/revigorelife-logo1.png">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
+
+  <!-- Google Analytics 4 (replace G-XXXXXXX) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXX', { 'anonymize_ip': true });
+  </script>
 
   <style>
-    :root{
-      --evergreen:#0B4F3F;
-      --emerald:#1AA37A;
-      --gold:#D4B46A;
-      --ink:#1B1F23;
-      --paper:#FAFAF7;
-      --logo-size: clamp(140px, 26vw, 220px); /* controls logo size */
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      margin: 0;
+      color: #1b1b1b;
+      background: #fafafa;
+      line-height: 1.6;
     }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background:
-        radial-gradient(1200px 800px at 20% 0%, rgba(26,163,122,.15), transparent 60%),
-        radial-gradient(1000px 700px at 80% 100%, rgba(11,79,63,.18), transparent 60%),
-        var(--paper);
-      color:var(--ink);
-      font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-      padding:32px;
+    header {
+      background: #fff;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      box-shadow: 0 2px 8px rgba(0,0,0,.05);
+      position: sticky;
+      top: 0;
+      z-index: 999;
     }
-    .card{
-      width:min(980px,92vw);
-      background:#fff;
-      border-radius:24px;
-      padding:48px 42px 38px;
-      box-shadow:
-        0 18px 55px rgba(0,0,0,.08),
-        0 1px 0 rgba(0,0,0,.05) inset;
-      text-align:center;
-      border:1px solid rgba(11,79,63,.08);
+    header img.logo {
+      height: 48px;
     }
-
-    /* ===== bigger, modern logo highlight ===== */
-    .logo-plate{
-      display:inline-grid;
-      place-items:center;
-      margin:0 auto 14px;
-      width: calc(var(--logo-size) + 36px);
-      height: calc(var(--logo-size) + 36px);
-      border-radius:24px;
-      background:
-        radial-gradient(120% 120% at 20% 10%, rgba(212,180,106,.12), transparent 50%),
-        radial-gradient(120% 120% at 80% 90%, rgba(26,163,122,.10), transparent 50%),
-        #fff;
-      border:1px solid rgba(11,79,63,.10);
-      box-shadow:
-        0 10px 24px rgba(11,79,63,.08),
-        0 0 0 6px rgba(212,180,106,.10);
+    nav a {
+      margin-left: 1.2rem;
+      text-decoration: none;
+      color: #1C6B63;
+      font-weight: 500;
     }
-    .logo-plate img{
-      width: var(--logo-size);
-      height:auto;
-      display:block;
-      filter: drop-shadow(0 2px 6px rgba(0,0,0,.06));
-      border-radius:14px; /* keeps edges neat if PNG has background */
+    nav a:hover {
+      text-decoration: underline;
     }
-
-    .wordmark{
-      font-family:"Playfair Display", serif;
-      font-weight:700;
-      letter-spacing:.6px;
-      font-size: clamp(34px, 6vw, 56px); /* much larger */
-      color:var(--evergreen);
-      line-height:1.04;
-      margin-top:10px;
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
     }
-    .tag{
-      font-size:16px;
-      color:#40514e;
-      margin-top:6px;
+    h1 {
+      font-size: 2.5rem;
+      color: #1C6B63;
     }
-    .divider{
-      width:96px;height:2px;background:var(--gold);
-      margin:18px auto 24px;border-radius:2px;
+    .tagline {
+      font-size: 1.2rem;
+      color: #555;
+      margin-bottom: 2rem;
     }
-    .lead{font-size:18px;color:#334;max-width:760px;margin:0 auto}
-    .pill{
-      display:inline-flex; align-items:center; gap:10px;
-      margin-top:24px;
-      padding:12px 18px;
-      border:1px solid rgba(11,79,63,.18);
-      border-radius:999px;
-      background:#fff;
-      color:#163; font-weight:500;
+    footer {
+      background: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+      border-top: 1px solid #eee;
+      margin-top: 3rem;
     }
-    .pill svg{width:18px;height:18px}
-    footer{margin-top:26px; font-size:13px; color:#677}
-    .links a{color:var(--evergreen); text-decoration:none; margin:0 8px}
-    .links a:hover{text-decoration:underline}
+    .social {
+      display: flex;
+      justify-content: center;
+      gap: 14px;
+      margin-top: 1rem;
+    }
+    .social a {
+      display: inline-flex;
+      line-height: 0;
+      transition: transform .15s ease, opacity .15s ease;
+    }
+    .social a:hover {
+      transform: translateY(-1px);
+      opacity: .9;
+    }
+    .social img {
+      width: 28px;
+      height: 28px;
+    }
+    @media (min-width:768px) {
+      .social img {
+        width: 30px;
+        height: 30px;
+      }
+    }
   </style>
 </head>
 <body>
-  <main class="card">
-    <!-- Modern hero: big logo inside a soft glass tile -->
-    <a href="https://revigorelife.com" aria-label="RevigoreLife homepage" style="text-decoration:none;color:inherit">
-      <div class="logo-plate">
-        <img src="assets/img/revigorelife-logo2.png" alt="RevigoreLife logo">
-      </div>
-    </a>
 
-    <div class="wordmark">REVIGORELIFE</div>
-    <div class="tag">Wellness • Balance • Vitality</div>
-
-    <div class="divider"></div>
-
-    <p class="lead">
-      Our new experience is almost ready. Evidence‑based wellness insights, curated products, and
-      simple guides to help you feel your best—every day.
-    </p>
-
-    <div class="pill" role="status" aria-live="polite">
-      <!-- clock icon -->
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-        <circle cx="12" cy="12" r="9"></circle>
-        <path d="M12 7v5l3 2"></path>
-      </svg>
-      Launching soon — stay tuned
+  <header>
+    <div>
+      <img src="/revigorelife-horizontal.svg" alt="RevigoreLife" class="logo">
     </div>
+    <nav>
+      <a href="/privacy.html">Privacy</a>
+      <a href="/disclosures.html">Disclosures</a>
+      <a href="mailto:contact@revigorelife.com">Contact</a>
+    </nav>
+  </header>
 
-    <footer>
-      <div class="links" style="margin-top:10px">
-        <a href="/">Home</a> •
-        <a href="#" aria-disabled="true">Privacy</a> •
-        <a href="#" aria-disabled="true">Disclosures</a>
-      </div>
-      <div style="margin-top:8px">© <script>document.write(new Date().getFullYear())</script> RevigoreLife</div>
-    </footer>
+  <main>
+    <h1>Welcome to RevigoreLife</h1>
+    <p class="tagline">Live Your Best Life</p>
+
+    <p>At RevigoreLife, we believe in empowering you with the tools, tips, and resources to live healthier, happier, and more fulfilled. Whether it’s improving your wellness, upgrading your daily habits, or finding the best lifestyle products, we’re here to guide you every step of the way.</p>
+
+    <p>Explore our articles, resources, and recommendations — and don’t forget to follow us on social media for the latest updates.</p>
   </main>
+
+  <footer>
+    <div class="social" role="group" aria-label="Social media links">
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/in/YOUR-LINKEDIN" target="_blank" rel="noopener" aria-label="LinkedIn">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg" alt="LinkedIn" loading="lazy">
+      </a>
+      <!-- Instagram -->
+      <a href="https://www.instagram.com/YOUR-INSTAGRAM" target="_blank" rel="noopener" aria-label="Instagram">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" loading="lazy">
+      </a>
+      <!-- WhatsApp -->
+      <a href="https://wa.me/YOUR-PHONE" target="_blank" rel="noopener" aria-label="WhatsApp">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" loading="lazy">
+      </a>
+    </div>
+    <p style="margin-top:1rem; font-size:.9rem; color:#777;">
+      © <script>document.write(new Date().getFullYear())</script> RevigoreLife. All rights reserved.
+    </p>
+  </footer>
+
 </body>
 </html>
