--- a/index.html
+++ b/index.html
@@ -89,15 +89,6 @@
       gap: 14px;
       margin-top: 1rem;
     }
-    .social a {
-      display: inline-flex;
-      line-height: 0;
-      transition: transform .15s ease, opacity .15s ease;
-    }
-    .social a:hover {
-      transform: translateY(-1px);
-      opacity: .9;
-    }
     .social img {
       width: 28px;
       height: 28px;
@@ -133,19 +124,10 @@
   </main>
 
   <footer>
-    <div class="social" role="group" aria-label="Social media links">
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/in/YOUR-LINKEDIN" target="_blank" rel="noopener" aria-label="LinkedIn">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg" alt="LinkedIn" loading="lazy">
-      </a>
-      <!-- Instagram -->
-      <a href="https://www.instagram.com/YOUR-INSTAGRAM" target="_blank" rel="noopener" aria-label="Instagram">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" loading="lazy">
-      </a>
-      <!-- WhatsApp -->
-      <a href="https://wa.me/YOUR-PHONE" target="_blank" rel="noopener" aria-label="WhatsApp">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" loading="lazy">
-      </a>
+    <div class="social" role="group" aria-label="Social media icons">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg" alt="LinkedIn" loading="lazy">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" loading="lazy">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" loading="lazy">
     </div>
     <p style="margin-top:1rem; font-size:.9rem; color:#777;">
       © <script>document.write(new Date().getFullYear())</script> RevigoreLife. All rights reserved.
