--- a/index.html
+++ b/index.html
@@ -13,118 +13,50 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://revigorelife.com/">
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="RevigoreLife — Live Your Best Life">
-  <meta name="twitter:description" content="RevigoreLife helps you live your best life with health, wellness, and lifestyle tips.">
-  <meta name="twitter:image" content="https://revigorelife.com/og-cover.jpg">
-
-  <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
 
-  <!-- Google Analytics 4 (replace G-XXXXXXX) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXX', { 'anonymize_ip': true });
-  </script>
-
   <style>
-    :root {
-      --brand: #1C6B63;   /* RevigoreLife green */
-      --ink: #1b1b1b;
-      --bg: #fafafa;
-    }
-    * { box-sizing: border-box; }
+    :root { --brand:#1C6B63; --ink:#163a36; --bg:#f7f9f8; }
+    *{box-sizing:border-box}
+    html, body { height:100%; margin:0; }
     body {
-      font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      margin: 0;
-      color: var(--ink);
-      background: var(--bg);
-      line-height: 1.6;
+      display:flex; flex-direction:column; min-height:100vh;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--ink); background:var(--bg); line-height:1.6;
     }
 
     /* Header with big centered logo */
     header.hero {
-      background: #fff;
-      padding: 36px 20px 18px;
-      border-bottom: 1px solid #eee;
-      text-align: center;
+      background:#fff; padding:36px 20px 18px; border-bottom:1px solid #e7ecea; text-align:center;
     }
     .hero .logo {
-      width: clamp(160px, 22vw, 260px);
-      height: auto;
-      display: inline-block;
-      filter: drop-shadow(0 6px 18px rgba(0,0,0,.08));
+      width:clamp(160px,22vw,260px); height:auto; display:inline-block;
+      filter:drop-shadow(0 6px 18px rgba(0,0,0,.08));
     }
 
-    main {
-      max-width: 960px;
-      margin: 24px auto 48px;
-      padding: 0 20px;
-    }
-    h1 {
-      font-size: clamp(28px, 4vw, 44px);
-      color: var(--brand);
-      margin: 16px 0 8px;
-    }
-    .tagline {
-      font-size: clamp(16px, 2.2vw, 20px);
-      color: #555;
-      margin-bottom: 24px;
-    }
+    main { flex:1; max-width:960px; margin:24px auto 48px; padding:0 20px; }
+    h1 { font-size:clamp(28px,4vw,44px); color:var(--brand); margin:16px 0 8px; }
+    .tagline { font-size:clamp(16px,2.2vw,20px); color:#5a6c69; margin-bottom:24px; }
 
-    /* Social icons row */
-    .social {
-      display: flex;
-      justify-content: center;
-      gap: 18px;
-      margin: 36px 0 8px;
-      align-items: center;
-    }
-    .social img {
-      display: block;
-      width: 34px;
-      height: 34px;
-      object-fit: contain;
-    }
+    /* Social row (no links) */
+    .social { display:flex; justify-content:center; gap:18px; margin:36px 0 8px; align-items:center; }
+    .social img { width:34px; height:34px; object-fit:contain; display:block; }
 
-    /* Footer green bar with links */
-    .site-footer {
-      margin-top: 40px;
-      background: var(--brand);
-      color: #fff;
-      text-align: center;
-    }
+    /* Footer green bar */
+    .site-footer { background:var(--brand); color:#fff; text-align:center; }
     .site-footer .links {
-      display: flex;
-      gap: 22px;
-      justify-content: center;
-      flex-wrap: wrap;
-      padding: 14px 16px;
-      border-bottom: 1px solid rgba(255,255,255,.2);
+      display:flex; gap:22px; justify-content:center; flex-wrap:wrap;
+      padding:14px 16px; border-bottom:1px solid rgba(255,255,255,.2);
     }
-    .site-footer .links a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;
-      letter-spacing: .2px;
-    }
-    .site-footer .links a:hover { text-decoration: underline; }
-    .site-footer .legal {
-      font-size: .92rem;
-      opacity: .95;
-      padding: 12px 16px 18px;
-    }
+    .site-footer .links a { color:#fff; text-decoration:none; font-weight:600; letter-spacing:.2px; }
+    .site-footer .links a:hover { text-decoration:underline; }
+    .site-footer .legal { font-size:.92rem; opacity:.95; padding:12px 16px 18px; }
   </style>
 </head>
 <body>
 
-  <!-- Bigger, centered logo -->
   <header class="hero" role="banner">
-    <!-- Make sure this file exists: /assets/img/revigorelife-logo1.png -->
+    <!-- Make sure this file exists exactly: /assets/img/revigorelife-logo1.png -->
     <img src="/assets/img/revigorelife-logo1.png" alt="RevigoreLife" class="logo">
   </header>
 
@@ -138,13 +70,11 @@
 
     <!-- Local, repo-hosted icons (no links) -->
     <div class="social" role="group" aria-label="Social media icons">
-      <!-- Ensure these files exist in /assets/img/ with EXACT names -->
       <img src="/assets/img/instagram.png" alt="Instagram logo" loading="lazy">
       <img src="/assets/img/whatsapp.svg"  alt="WhatsApp logo"  loading="lazy">
     </div>
   </main>
 
-  <!-- Green footer bar with links at the bottom -->
   <footer class="site-footer" role="contentinfo">
     <nav class="links" aria-label="Footer">
       <a href="/privacy.html">Privacy</a>
