--- a/disclosures.html
+++ b/disclosures.html
@@ -1,46 +1,85 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Disclosures & Disclaimer – RevigoreLife</title>
-  <meta name="description" content="Affiliate disclosure, medical disclaimer, and editorial standards for RevigoreLife." />
-  <link rel="icon" href="/assets/img/favicon.png" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Disclosures | RevigoreLife</title>
+  <meta name="description" content="RevigoreLife disclosures"/>
+
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;margin:0;background:#fafafa;color:#0b2530;line-height:1.65}
-    .container{max-width:900px;margin:0 auto;padding:28px}
-    h1{font-size:30px;margin:6px 0 12px}
-    h2{font-size:22px;margin:26px 0 8px}
-    p,li{color:#4b5563}
-    a{color:#0f766e}
-    .card{background:#fff;border:1px solid #ecf0f4;border-radius:16px;padding:22px}
-    .note{background:#f7fffd;border:1px solid #d4f1ec;border-radius:12px;padding:14px;margin:12px 0}
+    :root { --brand:#1C6B63; --ink:#163a36; --bg:#f7f9f8; }
+    *{box-sizing:border-box}
+    html, body { height:100%; margin:0; }
+    body {
+      display:flex; flex-direction:column; min-height:100vh;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--ink); background:var(--bg); line-height:1.6;
+    }
+
+    .backwrap { max-width:960px; margin:16px auto 0; padding:0 20px; }
+    .backbtn {
+      display:inline-block; background:#ffffff; color:var(--brand); border:2px solid var(--brand);
+      padding:8px 14px; border-radius:10px; font-weight:700; text-decoration:none;
+      transition:background .15s ease, color .15s ease;
+    }
+    .backbtn:hover { background:var(--brand); color:#fff; }
+
+    main { flex:1; max-width:860px; margin:16px auto 48px; padding:0 20px; }
+    .card {
+      background:#fff; padding:24px; border-radius:14px;
+      box-shadow:0 10px 30px rgba(0,0,0,.06); border:1px solid #eee;
+    }
+    h1 { font-size:2.2rem; margin:12px 0 8px; color:var(--brand); }
+    h2 { margin-top:32px; color:#333; }
+    a { color:var(--brand); text-decoration:none; border-bottom:1px solid var(--brand); }
+    .muted { color:#666; font-size:.95rem; }
+
+    /* Footer green bar */
+    .site-footer { background:var(--brand); color:#fff; text-align:center; }
+    .site-footer .links {
+      display:flex; gap:22px; justify-content:center; flex-wrap:wrap;
+      padding:14px 16px; border-bottom:1px solid rgba(255,255,255,.2);
+    }
+    .site-footer .links a { color:#fff; text-decoration:none; font-weight:600; }
+    .site-footer .links a:hover { text-decoration:underline; }
+    .site-footer .legal { font-size:.92rem; opacity:.95; padding:12px 16px 18px; }
   </style>
 </head>
 <body>
-  <main class="container">
-    <h1>Disclosures & Disclaimer</h1>
+
+  <div class="backwrap">
+    <a class="backbtn" href="/" onclick="if(history.length>1){history.back(); return false;}">← Back</a>
+  </div>
+
+  <main role="main">
     <div class="card">
+      <h1>Disclosures</h1>
+      <p class="muted">Last updated: <script>document.write(new Date().toLocaleDateString())</script></p>
+
       <h2>Affiliate Disclosure</h2>
-      <p>Some links on this Site are affiliate links. If you click a link and make a purchase, we may earn a commission at no additional cost to you. We disclose this in accordance with applicable advertising guidelines, including the U.S. FTC Endorsement Guides and Canadian Competition Bureau guidance on online disclosures.</p>
+      <p>Some links on RevigoreLife are affiliate links. This means we may earn a commission if you click a link and purchase a product — at no additional cost to you. We only recommend products we believe bring real value. Your support helps us keep creating helpful content.</p>
 
-      <h2>Editorial Independence</h2>
-      <p>Our content aims to be practical and easy to understand. Affiliate partnerships do not determine our topics or opinions. We strive to present clear information, including product benefits, limitations, and links to official sources.</p>
+      <h2>Medical Disclaimer</h2>
+      <p>Content on this site is for informational and educational purposes only. It is not medical advice. Always consult with a qualified healthcare professional before making changes to your diet, supplements, or exercise routine.</p>
 
-      <h2>Health & Medical Disclaimer</h2>
-      <div class="note">
-        <p>Content on RevigoreLife is for informational purposes only and does not constitute medical advice, diagnosis, or treatment. Products mentioned are not intended to diagnose, treat, cure, or prevent any disease. Always read labels and follow directions on the official product page. Consult a qualified healthcare professional regarding any questions about your health.</p>
-      </div>
-
-      <h2>Testimonials & Reviews</h2>
-      <p>Testimonials or quotes may reflect individual experiences. Results vary and are not guaranteed. We avoid deceptive or unsubstantiated claims.</p>
-
-      <h2>Advertising & Sponsorship</h2>
-      <p>We may work with advertisers or sponsors. Sponsored content will be labeled clearly as “Sponsored” or “Advertisement.”</p>
+      <h2>Advertising Disclosure</h2>
+      <p>We may display advertising across the site, including retargeting. Ads and affiliate relationships do not influence the objectivity of our content.</p>
 
       <h2>Contact</h2>
-      <p>Questions about these disclosures? Email <a href="mailto:CONTACT@REVIGORELIFE.COM">CONTACT@REVIGORELIFE.COM</a>.</p>
+      <p>Questions? Email us at <a href="mailto:contact@revigorelife.com">contact@revigorelife.com</a>.</p>
     </div>
   </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <nav class="links" aria-label="Footer">
+      <a href="/privacy.html">Privacy</a>
+      <a href="/disclosures.html">Disclosures</a>
+      <a href="mailto:contact@revigorelife.com">Contact</a>
+    </nav>
+    <div class="legal">
+      © <script>document.write(new Date().getFullYear())</script> RevigoreLife. All rights reserved.
+    </div>
+  </footer>
+
 </body>
 </html>
