--- a/privacy.html
+++ b/privacy.html
@@ -54,4 +54,64 @@
   <main role="main">
     <div class="card">
       <h1>Privacy Policy</h1>
-      <p class="muted">Last updated: <script>document.write(new Date().toLocaleDateString())</scrip
+      <p class="muted">Last updated: <script>document.write(new Date().toLocaleDateString())</script></p>
+
+      <p>RevigoreLife ("we", "us", or "our") respects your privacy. This Privacy Policy explains how we collect, use, and protect your information when you visit our website and use our services.</p>
+
+      <h2>Information We Collect</h2>
+      <ul>
+        <li><strong>Contact information</strong> (e.g., name, email) when you submit forms.</li>
+        <li><strong>Usage data</strong> (e.g., pages viewed, device/browser data) collected via analytics tools (see "Analytics").</li>
+        <li><strong>Affiliate interactions</strong> when you click outbound links to partner sites.</li>
+      </ul>
+
+      <h2>How We Use Information</h2>
+      <ul>
+        <li>To operate and improve our website and content.</li>
+        <li>To communicate with you and respond to inquiries.</li>
+        <li>To analyze performance and measure campaigns.</li>
+        <li>To comply with legal obligations.</li>
+      </ul>
+
+      <h2>Cookies & Tracking</h2>
+      <p>We use cookies and similar technologies for essential site functionality and analytics. You can control cookies via your browser settings.</p>
+
+      <h2>Analytics</h2>
+      <p>We use Google Analytics 4 (GA4) and/or Google Tag Manager to understand how visitors use the site. Data may include IP address (with IP anonymization), device info, pages visited, and events. You can opt out by using <a href="https://tools.google.com/dlpage/gaoptout">Google’s opt-out add-on</a>.</p>
+
+      <h2>Affiliate Links</h2>
+      <p>Some links on this site are affiliate links. If you click and make a purchase, we may earn a commission at no extra cost to you. See our <a href="/disclosures.html">Disclosures</a>.</p>
+
+      <h2>Data Sharing</h2>
+      <p>We do not sell your personal information. We may share data with service providers (e.g., analytics, hosting) under contractual confidentiality and only as necessary to provide our services.</p>
+
+      <h2>Data Security</h2>
+      <p>We use reasonable administrative, technical, and physical safeguards to protect your information. However, no method of transmission over the Internet is 100% secure.</p>
+
+      <h2>Your Rights</h2>
+      <p>You may request access, correction, or deletion of your personal information by contacting us.</p>
+
+      <h2>Children’s Privacy</h2>
+      <p>Our site is not intended for children under 13. We do not knowingly collect data from children.</p>
+
+      <h2>Contact</h2>
+      <p>Questions? Email us at <a href="mailto:contact@revigorelife.com">contact@revigorelife.com</a>.</p>
+
+      <h2>Changes</h2>
+      <p>We may update this policy occasionally. Changes will be posted on this page with an updated date.</p>
+    </div>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <nav class="links" aria-label="Footer">
+      <a href="/privacy.html">Privacy</a>
+      <a href="/disclosures.html">Disclosures</a>
+      <a href="mailto:contact@revigorelife.com">Contact</a>
+    </nav>
+    <div class="legal">
+      © <script>document.write(new Date().getFullYear())</script> RevigoreLife. All rights reserved.
+    </div>
+  </footer>
+
+</body>
+</html>
