--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- Local, repo-hosted icons (no links) -->
     <div class="social" role="group" aria-label="Social media icons">
-      <img src="/assets/img/instagram.png" alt="Instagram logo" loading="lazy">
+      <img src="/assets/img/Instagram.png" alt="Instagram logo" loading="lazy">
       <img src="/assets/img/whatsapp.svg"  alt="WhatsApp logo"  loading="lazy">
     </div>
   </main>
